Flight card info for single flights

--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ body, html {
 .app-container h1 {
   color: #fff;
 }
-
+/* 
 .ag-theme-alpine .ag-header-cell {
   background-color: #007bff;
   border-right: none;
@@ -96,4 +96,4 @@ body, html {
   .ag-theme-alpine .ag-cell {
     font-size: 12px;
   }
-}
+} */
