--- a/src/style.css
+++ b/src/style.css
@@ -100,7 +100,7 @@ body, html {
 } */
 
 .ag-theme-alpine .ag-header-cell-label {
-  font-size: 21px;
+  font-size: 1rem;
   font-weight: 500;
   font-family: "Poppins";
 }
