Styles fixes for flightcard and AG Grid table.

--- a/src/style.css
+++ b/src/style.css
@@ -3,40 +3,37 @@
 @tailwind utilities;
 
 body, html {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  background-color: #f4f4f4;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  box-sizing: border-box !important;
+  background-color: #f4f4f4 !important;
 }
 .main-container{
-  align-items: center;
-  width: 100%;
-  overflow-x: hidden;
+  align-items: center !important;
+  width: 100% !important;
+  overflow-x: hidden !important;
 }
 @media screen and (max-width: 768px) {
   .main-container {
-    align-items: flex-start;
-    width: 550px;
-    overflow-x: hidden;
+    align-items: flex-start !important;
   }
 }
 
 #mi-react-app {
-  font-family: "Poppins", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  min-height: 100vh; /* Asegura que el contenedor principal tenga al menos el alto de la ventana */
-  overflow-x: hidden; /* Evita el desplazamiento horizontal en el nivel del body */
+  font-family: "Lato", sans-serif !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  width: auto !important;
+  min-height: 100vh !important; /* Asegura que el contenedor principal tenga al menos el alto de la ventana */
 }
 .app-container {
-  width: 100%; /* Ajusta el contenedor de la aplicación para que ocupe el ancho completo */
-  max-width: 100vw; /* Evita que el contenedor sea más ancho que el viewport */
-  padding: 20px;
-  margin: 0 auto; /* Centra el contenedor en la pantalla */
+  width: 100% !important; /* Ajusta el contenedor de la aplicación para que ocupe el ancho completo */
+  max-width: auto !important; /* Evita que el contenedor sea más ancho que el viewport */
+  padding: 20px !important;
+  margin: 0 auto !important; /* Centra el contenedor en la pantalla */
 }
 
 .button_box {
@@ -54,9 +51,9 @@ body, html {
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  margin-right: 15px; /* Espaciado entre botones */
   cursor: pointer;
   transition: background-color 0.3s ease;
+  width: 150px;
 }
 
 .button:hover {
@@ -73,9 +70,16 @@ body, html {
   color: #fff;
 }
 
+
+.ag-theme-alpine {
+  flex: 1 1 0px;
+}
+
 .ag-theme-alpine .ag-header-cell {
   background-color: #3A5F97;
   border-right: none;
+  flex-wrap: nowrap;
+  word-wrap: break-word;
 }
 
 .ag-theme-alpine .ag-header-cell:hover {
@@ -85,6 +89,8 @@ body, html {
 .ag-theme-alpine .ag-header-cell-label {
   background-color: inherit;
   color: white;
+  flex-wrap: nowrap;
+  word-wrap: break-word;
 }
 
 .ag-theme-alpine .ag-header-icon {
@@ -93,6 +99,8 @@ body, html {
 
 .ag-theme-alpine .ag-cell {
   border-right: none;
+  flex-wrap: nowrap;
+  word-wrap: break-word;
 }
 
 /* .ag-theme-alpine .ag-root-wrapper {
@@ -100,33 +108,19 @@ body, html {
 } */
 
 .ag-theme-alpine .ag-header-cell-label {
-  font-size: 1rem;
+  font-size: 14px;
   font-weight: 500;
-  font-family: "Poppins";
+  font-family: "Lato";
+  width: 100%;
+  flex-wrap: nowrap;
+  word-wrap: break-word;
 }
 
 .ag-theme-alpine .ag-cell {
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 400;
-  font-family: "Poppins";
+  font-family: "Lato";
+  flex-wrap: nowrap;
+  word-wrap: break-word;
 }
 
-@media (max-width: 768px) {
-  .ag-theme-alpine .ag-header-cell-label {
-    font-size: 16px;
-  }
-
-  .ag-theme-alpine .ag-cell {
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 480px) {
-  .ag-theme-alpine .ag-header-cell-label {
-    font-size: 15px;
-  }
-
-  .ag-theme-alpine .ag-cell {
-    font-size: 12px;
-  }
-}
