--- a/src/style.css
+++ b/src/style.css
@@ -9,13 +9,13 @@ body, html {
   height: 100% !important;
   box-sizing: border-box !important;
   background-color: #f4f4f4 !important;
-  font-family: 'Lato', sans-serif !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 .main-container{
   align-items: center !important;
   width: 100% !important;
   overflow-x: hidden !important;
-  font-family: 'Lato', sans-serif !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 @media screen and (max-width: 768px) {
   .main-container {
@@ -24,7 +24,7 @@ body, html {
 }
 
 #mi-react-app {
-  font-family: 'Lato', sans-serif !important;
+  font-family: Arial, Helvetica, sans-serif !important;
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
@@ -36,6 +36,7 @@ body, html {
   max-width: auto !important; /* Evita que el contenedor sea más ancho que el viewport */
   padding: 20px !important;
   margin: 0 auto !important; /* Centra el contenedor en la pantalla */
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .button_box {
@@ -56,7 +57,7 @@ body, html {
   cursor: pointer;
   transition: background-color 0.3s ease;
   width: 150px;
-  font-family: 'Lato', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .button:hover {
@@ -83,6 +84,7 @@ body, html {
   border-right: none;
   flex-wrap: wrap;
   word-wrap: break-word;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .ag-theme-alpine .ag-header-cell:hover {
@@ -94,6 +96,7 @@ body, html {
   color: white;
   flex-wrap: wrap;
   word-wrap: break-word;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .ag-theme-alpine .ag-header-icon {
@@ -104,6 +107,7 @@ body, html {
   border-right: none;
   flex-wrap: wrap;
   word-wrap: break-word;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* .ag-theme-alpine .ag-root-wrapper {
@@ -113,7 +117,7 @@ body, html {
 .ag-theme-alpine .ag-header-cell-label {
   font-size: 14px;
   font-weight: 500;
-  font-family: "Lato";
+  font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   flex-wrap: wrap;
   word-wrap: break-word;
@@ -122,7 +126,7 @@ body, html {
 .ag-theme-alpine .ag-cell {
   font-size: 12px;
   font-weight: 400;
-  font-family: "Lato";
+  font-family: Arial, Helvetica, sans-serif;
   flex-wrap: wrap;
   word-wrap: break-word;
 }
